--- a/Pipfile
+++ b/Pipfile
@@ -132,9 +132,6 @@ sniffio = "==1.3.1"
 social-auth-app-django = "==5.4.3"
 social-auth-core = "==4.5.6"
 sqlparse = "==0.5.3"
-strawberry-django-plus = "==3.1.1"
-strawberry-graphql = "==0.278.0"
-strawberry-graphql-django = "==0.9.5"
 tornado = "==6.5.1"
 txaio = "==23.1.1"
 types-python-dateutil = "==2.9.0.20250516"
@@ -151,6 +148,9 @@ whitenoise = "==6.9.0"
 "zope.interface" = "==7.2"
 amqp = "==5.3.1"
 twisted = {extras = ["tls"], version = "==24.11.0"}
+django-graphql-jwt = "*"
+strawberry-graphql = {extras = ["multipart"], version = "==0.215.3"}
+django-elasticsearch-dsl = "*"
 
 [dev-packages]
 
