--- a/requirements.txt
+++ b/requirements.txt
@@ -41,6 +41,7 @@ django-countries==7.6.1
 django-db-geventpool==4.0.8
 django-debug-toolbar==5.2.0; python_version >= '3.9'
 django-filter==25.1; python_version >= '3.9'
+django-graphql-jwt==0.4.0; python_version >= '3.6'
 django-ratelimit==4.1.0; python_version >= '3.7'
 django-redis==5.4.0; python_version >= '3.6'
 django-rq==3.0.1
@@ -61,7 +62,10 @@ flask==3.1.1; python_version >= '3.9'
 flower==2.0.1; python_version >= '3.7'
 freezegun==1.5.2; python_version >= '3.8'
 geomet==0.2.1.post1; python_version >= '2.7' and python_version != '3.3' and python_version < '4'
+graphene==3.4.3
+graphene-django==3.2.3
 graphql-core==3.2.6; python_version >= '3.6' and python_version < '4'
+graphql-relay==3.2.0; python_version >= '3.6' and python_version < '4'
 gunicorn==23.0.0; python_version >= '3.7'
 h11==0.14.0; python_version >= '3.7'
 h2==4.2.0; python_version >= '3.9'
@@ -90,6 +94,7 @@ pillow==11.1.0; python_version >= '3.9'
 pluggy==1.6.0; python_version >= '3.9'
 priority==1.3.0
 prometheus-client==0.22.0; python_version >= '3.9'
+promise==2.3
 prompt-toolkit==3.0.50; python_full_version >= '3.8.0'
 psycogreen==1.0.2
 psycopg==3.2.9; python_version >= '3.8'
@@ -132,6 +137,7 @@ sqlparse==0.5.3; python_version >= '3.8'
 strawberry-django-plus==3.1.1; python_version >= '3.8' and python_version < '4.0'
 strawberry-graphql==0.278.0; python_version >= '3.9' and python_version < '4.0'
 strawberry-graphql-django==0.9.5; python_version >= '3.7' and python_version < '4.0'
+text-unidecode==1.3
 tornado==6.5.1; python_version >= '3.9'
 twisted[tls]==24.11.0; python_full_version >= '3.8.0'
 txaio==23.1.1; python_version >= '3.7'
